# aoc

./: .gitignore  LICENSE  pyproject.toml
src/aoc/: helpers.py
src/aoc/aoc2024/: code01.py  code02.py  code03.py  code04.py  code05.py  code06.py  code07.py  code08.py  code09.py  code10.py  code11.py  code12.py  code13.py  code14.py  code15.py  code16.py  code17.py  code18.py  code19.py  code20.py  code21.py  code22.py  code23.py  code24.py  code25.py
test/aoc2024/: test_aoc2024.py
test/aoc2024/data/: example03.txt  example06.txt  example15.txt  example16.txt  example17.txt  example18.txt  example24.txt  full01.txt  full02.txt  full05.txt  full07.txt  full10.txt  full11.txt  full12.txt  full13.txt  full14.txt  full15.txt  full16.txt  full17.txt  full18.txt  full19.txt  full20.txt  full21.txt  full22.txt  full23.txt  full24.txt  full25.txt
